# automatic-bell-system

./: Cargo.toml  sdkconfig.defaults
.cargo/: config.toml
.devcontainer/: devcontainer.json
access_point/src/: access_point.rs  lib.rs
clock/: Cargo.toml
clock/src/: alarm.rs  clock.rs  error.rs  lib.rs  synchronize_by.rs  system_time.rs
disk/: Cargo.toml
disk/src/: disk.rs  lib.rs  path.rs
display/: Cargo.toml
display/src/: display.rs
ds3231/: Cargo.toml
ds3231/src/: byte_offset.rs  date_time.rs  ds3231.rs  lib.rs
ds3231/src/ds3231/: set_time_error.rs
http_server/src/: http_server.rs
lib/access_point/: Cargo.toml
lib/access_point/src/: access_point.rs
lib/clock/: Cargo.toml
lib/clock/src/: alarm.rs  clock.rs  lib.rs
lib/disk/: Cargo.toml
lib/disk/src/: disk.rs
lib/display/: Cargo.toml
lib/display/src/: display.rs  lib.rs
lib/http_server/: Cargo.toml
lib/http_server/src/: http_request.rs  http_response.rs  http_server.rs  lib.rs  to_response_data.rs
lib/interface/: Cargo.toml
lib/interface/src/: clock.rs  disk.rs  lib.rs
lib/interface/src/clock/: error.rs
lib/interface/src/disk/: path.rs
lib/interface/src/disk/path/: directory_path.rs  error.rs  file_path.rs
lib/trigger/: Cargo.toml
lib/trigger/src/: alarm.rs  lib.rs  trigger.rs
sd_card/: Cargo.toml
sd_card/src/: lib.rs  path.rs  sd_card.rs
sd_card/src/path/: error.rs
src/: boxed_mutex.rs  boxed_synchronizer.rs  constant.rs  main.rs  model.rs  rest_interface.rs  schedule_system.rs  security.rs  synchronizer.rs  types.rs  web_interface.rs
src/model/: alarm.rs  auth.rs
src/model/alarm/: add_alarm.rs  alarm.rs  alarm_id.rs  alarm_with_id.rs  output_index.rs
src/model/auth/: access_point_credentials.rs  api_credentials.rs  login_credentials.rs
src/model/clock/: clock.rs
src/rest_interface/: alarm.rs  alarm_controller.rs  auth.rs  auth_controller.rs  clock.rs  clock_controller.rs  security.rs
src/rest_interface/alarm/: controller.rs  model.rs
src/rest_interface/alarm/model/: add_alarm.rs  alarm.rs  alarm_id.rs  output_index.rs
src/rest_interface/clock/: controller.rs  model.rs
src/schedule_system/: alarm_id.rs  error.rs  model.rs  to_alarms_with_id.rs
src/schedule_system/model/: alarm_outputs.rs  output_index.rs
src/security/: error.rs
