[workspace]
members = ["lib/access_point", "lib/clock", "lib/display", "lib/http_server", "lib/disk", "lib/interface"]

[package]
name = "automatic-bell-system"
version = "0.1.0"
authors = ["Khachatur Yeritsyan <yeritsyan.kh.01@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "automatic-bell-system"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
esp-idf-svc = { version = "0.49", default-features = false }
shared-bus = { version = "0.3.1", features = ["std"] }

display-interface = "0.4.1"
chrono = "0.4.38"
embedded-sdmmc = "0.8.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_urlencoded = "0.7.1"
uuid = "1.11.0"

clock = { path = "lib/clock" }
display = { path = "lib/display" }
access_point = { path = "lib/access_point" }
http_server = { path = "lib/http_server" }
disk = { path = "lib/disk" }
interface = { path = "lib/interface" }

[build-dependencies]
embuild = "0.32.0"
